--- a/index.html
+++ b/index.html
@@ -946,19 +946,24 @@
 
     .client-actions {
         display: flex;
-        gap: 4px;
+        gap: 8px;
         opacity: 1;
     }
 
     .client-action-btn {
         background: none;
         border: none;
-        padding: 4px 8px;
+        padding: 6px 10px;
         cursor: pointer;
-        font-size: 16px;
+        font-size: 20px;
         border-radius: 6px;
         transition: all 0.2s ease;
         line-height: 1;
+        min-width: 38px;
+        min-height: 38px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .client-action-btn:hover {
@@ -1001,7 +1006,7 @@
 
     .phone-actions {
         display: flex;
-        gap: 6px;
+        gap: 12px;
         margin-left: auto;
     }
 
@@ -1015,9 +1020,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 32px;
-        height: 32px;
+        width: 38px;
+        height: 38px;
         box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+    }
+
+    .phone-action-btn svg {
+        width: 20px;
+        height: 20px;
     }
 
     .phone-action-btn svg {
@@ -1138,6 +1148,32 @@
             bottom: 60px;
             padding: 14px 24px;
             font-size: 15px;
+        }
+
+        /* Ajustes para mobile - botões maiores */
+        .phone-action-btn {
+            width: 42px;
+            height: 42px;
+        }
+
+        .phone-action-btn svg {
+            width: 22px;
+            height: 22px;
+        }
+
+        .phone-actions {
+            gap: 14px;
+        }
+
+        .client-action-btn {
+            font-size: 22px;
+            min-width: 42px;
+            min-height: 42px;
+            padding: 8px 12px;
+        }
+
+        .client-actions {
+            gap: 10px;
         }
 
         .modal-container {
@@ -3323,12 +3359,12 @@ function renderClients(clients) {
                     <span>${escapeHtml(client.phone)}</span>
                     <div class="phone-actions">
                         <a href="tel:${client.phone.replace(/\D/g, '')}" class="phone-action-btn call-btn" title="Ligar">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z" fill="white"/>
                             </svg>
                         </a>
                         <a href="https://wa.me/55${client.phone.replace(/\D/g, '')}" target="_blank" class="phone-action-btn whatsapp-btn" title="WhatsApp">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0012.04 2m.01 1.67c2.2 0 4.26.86 5.82 2.42a8.225 8.225 0 012.41 5.83c0 4.54-3.7 8.23-8.24 8.23-1.48 0-2.93-.39-4.19-1.15l-.3-.17-3.12.82.83-3.04-.2-.32a8.188 8.188 0 01-1.26-4.38c.01-4.54 3.7-8.24 8.25-8.24M8.53 7.33c-.16 0-.43.06-.66.31-.22.25-.87.85-.87 2.07 0 1.22.89 2.39 1 2.56.14.17 1.76 2.67 4.25 3.73.59.27 1.05.42 1.41.53.59.19 1.13.16 1.56.1.48-.07 1.46-.6 1.67-1.18.21-.58.21-1.07.15-1.18-.07-.1-.23-.16-.48-.27-.25-.14-1.47-.74-1.69-.82-.23-.08-.37-.12-.56.12-.16.25-.64.81-.78.97-.15.17-.29.19-.53.07-.26-.13-1.06-.39-2-1.23-.74-.66-1.23-1.47-1.38-1.72-.14-.25-.02-.39.11-.5.11-.11.25-.29.37-.44.13-.14.17-.25.25-.41.08-.17.04-.31-.02-.43-.06-.11-.56-1.35-.76-1.84-.2-.48-.4-.42-.56-.43-.14 0-.3-.01-.47-.01z" fill="white"/>
                             </svg>
                         </a>
