--- a/index.html
+++ b/index.html
@@ -1008,10 +1008,6 @@
         display: flex;
         gap: 12px;
         margin-left: auto;
-        user-select: none;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
     }
 
     .phone-action-btn {
@@ -1027,32 +1023,18 @@
         width: 38px;
         height: 38px;
         box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-        outline: none;
-        -webkit-tap-highlight-color: transparent;
-        user-select: none;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        touch-action: manipulation;
-    }
-
-    .phone-action-btn:focus,
-    .phone-action-btn:focus-visible,
-    .phone-action-btn:focus-within {
-        outline: none;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.15);
     }
 
     .phone-action-btn svg {
         width: 20px;
         height: 20px;
-        transition: all 0.2s ease;
-        pointer-events: none;
     }
 
-    .phone-action-btn.call-btn,
-    .phone-action-btn.call-btn:link,
-    .phone-action-btn.call-btn:visited {
+    .phone-action-btn svg {
+        transition: all 0.2s ease;
+    }
+
+    .phone-action-btn.call-btn {
         background: #2196F3;
     }
 
@@ -1062,19 +1044,7 @@
         box-shadow: 0 3px 6px rgba(33,150,243,0.4);
     }
 
-    .phone-action-btn.call-btn:active {
-        background: #2196F3;
-        transform: scale(0.95);
-    }
-
-    .phone-action-btn.call-btn:focus {
-        background: #2196F3;
-        transform: scale(1);
-    }
-
-    .phone-action-btn.whatsapp-btn,
-    .phone-action-btn.whatsapp-btn:link,
-    .phone-action-btn.whatsapp-btn:visited {
+    .phone-action-btn.whatsapp-btn {
         background: #25D366;
     }
 
@@ -1084,14 +1054,8 @@
         box-shadow: 0 3px 6px rgba(37,211,102,0.4);
     }
 
-    .phone-action-btn.whatsapp-btn:active {
-        background: #25D366;
+    .phone-action-btn:active {
         transform: scale(0.95);
-    }
-
-    .phone-action-btn.whatsapp-btn:focus {
-        background: #25D366;
-        transform: scale(1);
     }
 
     .empty-state {
@@ -1210,27 +1174,6 @@
 
         .client-actions {
             gap: 10px;
-        }
-
-        /* Forçar reset de estado dos botões de telefone no mobile */
-        .phone-action-btn:active,
-        .phone-action-btn:focus,
-        .phone-action-btn:visited {
-            background: var(--original-bg) !important;
-            transform: scale(1) !important;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.15) !important;
-        }
-
-        .phone-action-btn.call-btn:active,
-        .phone-action-btn.call-btn:focus,
-        .phone-action-btn.call-btn:visited {
-            background: #2196F3 !important;
-        }
-
-        .phone-action-btn.whatsapp-btn:active,
-        .phone-action-btn.whatsapp-btn:focus,
-        .phone-action-btn.whatsapp-btn:visited {
-            background: #25D366 !important;
         }
 
         .modal-container {
@@ -3415,12 +3358,12 @@ function renderClients(clients) {
                     <span class="client-info-icon">📞</span>
                     <span>${escapeHtml(client.phone)}</span>
                     <div class="phone-actions">
-                        <a href="tel:${client.phone.replace(/\D/g, '')}" class="phone-action-btn call-btn" title="Ligar" onclick="event.stopPropagation(); this.blur();">
+                        <a href="tel:${client.phone.replace(/\D/g, '')}" class="phone-action-btn call-btn" title="Ligar" onclick="event.stopPropagation()">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z" fill="white"/>
                             </svg>
                         </a>
-                        <a href="https://wa.me/55${client.phone.replace(/\D/g, '')}" target="_blank" class="phone-action-btn whatsapp-btn" title="WhatsApp" onclick="event.stopPropagation(); this.blur();">
+                        <a href="https://wa.me/55${client.phone.replace(/\D/g, '')}" target="_blank" class="phone-action-btn whatsapp-btn" title="WhatsApp" onclick="event.stopPropagation()">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0012.04 2m.01 1.67c2.2 0 4.26.86 5.82 2.42a8.225 8.225 0 012.41 5.83c0 4.54-3.7 8.23-8.24 8.23-1.48 0-2.93-.39-4.19-1.15l-.3-.17-3.12.82.83-3.04-.2-.32a8.188 8.188 0 01-1.26-4.38c.01-4.54 3.7-8.24 8.25-8.24M8.53 7.33c-.16 0-.43.06-.66.31-.22.25-.87.85-.87 2.07 0 1.22.89 2.39 1 2.56.14.17 1.76 2.67 4.25 3.73.59.27 1.05.42 1.41.53.59.19 1.13.16 1.56.1.48-.07 1.46-.6 1.67-1.18.21-.58.21-1.07.15-1.18-.07-.1-.23-.16-.48-.27-.25-.14-1.47-.74-1.69-.82-.23-.08-.37-.12-.56.12-.16.25-.64.81-.78.97-.15.17-.29.19-.53.07-.26-.13-1.06-.39-2-1.23-.74-.66-1.23-1.47-1.38-1.72-.14-.25-.02-.39.11-.5.11-.11.25-.29.37-.44.13-.14.17-.25.25-.41.08-.17.04-.31-.02-.43-.06-.11-.56-1.35-.76-1.84-.2-.48-.4-.42-.56-.43-.14 0-.3-.01-.47-.01z" fill="white"/>
                             </svg>
@@ -3488,69 +3431,6 @@ function renderClients(clients) {
             if (client) {
                 deleteClient(client);
             }
-        });
-    });
-
-    // Event listeners para botões de telefone (ligação e WhatsApp)
-    // Solução para mobile: forçar remoção de foco criando elemento temporário
-    document.querySelectorAll('.phone-action-btn').forEach(btn => {
-        // Prevenir propagação em todos os eventos de toque
-        btn.addEventListener('touchstart', function(e) {
-            e.stopPropagation();
-        }, { passive: true });
-
-        btn.addEventListener('touchend', function(e) {
-            e.stopPropagation();
-            e.preventDefault();
-            const element = this;
-
-            // Criar elemento invisível temporário para roubar o foco
-            const tempInput = document.createElement('input');
-            tempInput.style.position = 'absolute';
-            tempInput.style.opacity = '0';
-            tempInput.style.height = '0';
-            tempInput.style.width = '0';
-            tempInput.style.pointerEvents = 'none';
-            document.body.appendChild(tempInput);
-
-            // Dar foco ao elemento temporário (remove foco do botão)
-            setTimeout(() => {
-                tempInput.focus();
-                tempInput.blur();
-                document.body.removeChild(tempInput);
-                element.blur();
-            }, 1);
-        });
-
-        btn.addEventListener('click', function(e) {
-            e.stopPropagation();
-            const element = this;
-
-            // Mesmo processo para o evento click
-            setTimeout(() => {
-                const tempInput = document.createElement('input');
-                tempInput.style.position = 'absolute';
-                tempInput.style.opacity = '0';
-                tempInput.style.height = '0';
-                tempInput.style.width = '0';
-                tempInput.style.pointerEvents = 'none';
-                document.body.appendChild(tempInput);
-
-                tempInput.focus();
-                tempInput.blur();
-                setTimeout(() => {
-                    if (document.body.contains(tempInput)) {
-                        document.body.removeChild(tempInput);
-                    }
-                }, 10);
-                element.blur();
-            }, 10);
-        });
-
-        // Prevenir seleção de texto
-        btn.addEventListener('selectstart', function(e) {
-            e.preventDefault();
-            return false;
         });
     });
 }
